# yt-download

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
yt_download/: __init__.py  cli.py  config.py  config_manager.py  downloader.py  history.py  logger.py  main.py  updater.py  url_validator.py
yt_download_mp3/: __init__.py  cli.py  config_manager.py  downloader.py  history.py  logger.py  main.py  updater.py  utils.py
