[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-download"
version = "1.0.1"
authors = [
    {name = "David Oliveira", email = "olivr.david@gmail.com"},
]
description = "A simple CLI tool to download YouTube videos and playlists in multiple audio formats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["youtube", "downloader", "mp3", "audio", "cli", "playlist"]
dependencies = [
    "yt-dlp>=2023.1.6",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/yt-download"
Repository = "https://github.com/yourusername/yt-download"
"Bug Reports" = "https://github.com/yourusername/yt-download/issues"

[project.scripts]
yt-download = "yt_download.main:main"

[tool.setuptools]
packages = ["yt_download"]

[tool.setuptools.package-data]
yt_download = ["*.json"]